refactored the code

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,12 @@
   --activeMenu : white;
   --inactiveMenu:rgba(255, 255, 255, 0.731);
   --bgColor:#ebf6f5c4;
+  --blue:#bb86fc;
+  --recieved:#d6bdf5;
+  --pink:#FF919D;
+  --orange:#fca61f;
+  --lightPink:#f799a354;
+
   
   
   
